--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -123,7 +123,7 @@ h3 {
 .form-group select {
   width: 100%;
   padding: 10px;
-  border: 1px solid #e6e6e6;
+  border: 1px solid gray;
   border-radius: 5px;
   margin-bottom: 10px;
   font-family: inherit;
